<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_upcoming"
        android:icon="@drawable/ic_calendar_month_24"
        android:title="@string/title_upcoming" />

    <item
        android:id="@+id/navigation_finished"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_finished" />

    <item
        android:id="@+id/fab"
        android:title=""
        android:enabled="false"/>

    <item
        android:id="@+id/navigation_favorite"
        android:icon="@drawable/ic_favorite_24"
        android:title="@string/title_favorite" />

    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/ic_settings_24"
        android:title="@string/title_settings" />

</menu>